public/styles.css
/* Viewport styles */
@viewport {
    width: device-width;
    zoom: 1.0;
}

/* MASTER STYLES */

body {
    font-family: "Lato", sans-serif;
    margin: 0px;
    background-color: whitesmoke;
    margin-bottom: 3vh;
}

.container {
    display: grid;
    /* our entire layout will be considered as having columns with this*/
    grid-template-columns: 1fr;
}


/* NAVIGATION STYLES */

.navigation-wrap {
    display: flex;
    justify-content: space-between;
    padding: 4.5vh;
}

.left-side {
    display: flex;
}

.right-side {
    font-size: min(max(2.5vh, 15px, 1vw), 20px);
    display: flex;
}

.right-side i {
    font-size: max(2.5vh, 20px, 1vw);
    width: max(4vh, 20px, 1vw);
    display: relative;
    color: black;
    
}

.navigation-wrap>.left-side>div {
    margin-right: 20px;
    font-size: min(max(2.5vh, 15px, 1vw), 20px);
    text-transform: uppercase;
}

.navigation-link-wrap {
    height: 22px;
    border-bottom: 1px solid transparent;
    transition: border-bottom 0.5s;
}

.navigation-link-wrap a {
    color: #8a8a8a;
    text-decoration: none;
}

.navigation-link-wrap:hover {
    color: black;
    transition: color 0.5s;
    border-bottom: 1px solid black;
}

.navigation-link-wrap a:hover {
    color: black;
    text-decoration: none;
}

.active-nav-link {
    border-bottom: 1px solid black;
}

.active-nav-link a {
    color: black !important;
}


/* PORTFOLIO STYLES */

.portfolio-items-wrapper {
    display: grid;
    /* gives each one of the columns, now three columns*/
    grid-template-columns: 1fr 1fr 1fr;
}

.portfolio-item-wrapper {
    position: relative;
}

.portfolio-img-background {
    height: 350px;
    width: 100%;
    /* if you do not have images are same size, we want to crop images to sit next to eachother nicely */
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    transition: 0.5s;
    filter: brightness(100%);
}

.img-text-wrapper {
    position: absolute;
    top: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100%;
    text-align: center;
    padding-left: 100px;
    padding-right: 100px;
}

.logo-wrapper img {
    width: 50%;
    margin-bottom: 20px;
}
/*
.logo-wrapper {
    width: 80%;
    margin-bottom: 20px;
    font-size: max(2.75vh, 15px, 1.5vw);
    color: white;
    font-weight: bold;
    background-color: rgba(32, 32, 32, 0.267);
    position: relative;
}*/

.logo-wrapper-button {
    width: 100%;
    margin-bottom: 20px;
    font-size: max(2.75vh, 20px, 1.5vw);
    color: whitesmoke;
    /*background-color: rgb(114, 128, 143);*/
    font-weight: bold;
    background-color: rgba(32, 32, 32, 0.267);
    position: relative;

    border-radius: max(2px, .5vh, .5vw);
    border: 2px solid transparent;
    transition: border 0.5s;
}
.logo-wrapper-button:hover {
    transition: .5s;
    border: 2px solid rgba(245, 245, 245, 0.8);
    border-radius: max(2px, .5vh, .5vw);
}

.logo-wrapper-darken {
    transition: .5s;
    background-color: transparent;
}

.img-text-wrapper .subtitle {
    transition: 1s;
    font-weight: 600;
    color: transparent;
}

.img-text-wrapper .subtitle a {
    transition: 1s;
    font-weight: 600;
    color: transparent;
}

.img-text-wrapper .subtitle i {
    size: max(3vh, 15px, 1.5vw);
    font-size: max(3.5vh, 20px, 1.5vw);
}

.img-text-wrapper:hover .subtitle {
    color: rgb(0, 174, 255);
}

.img-text-wrapper:hover .subtitle a {
    color: rgb(0, 174, 255);
}

.img-darken {
    transition: .5s;
    filter: brightness(10%);
}


/* About Page */

.two-column-wrapper {
    display: grid;
    grid-template-columns: 1fr 1fr;
}

.profile-image-wrapper {
    width: 100%;
    height: 80%;
    padding: 1vh 1vh 1vh 2vh;
    display: table;
}

.profile-image-wrapper img {
    display: table-cell;
    width: 100%;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}


/* Contact Card */

.card {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    margin: auto;
    text-align: center;
    max-width: 100%;
    width: 30%;
    background-color: lightgray;
    font-family: "Lato", sans-serif;
    display: table-cell;
    vertical-align: middle;
    font-size: max(2.5vh, 15px, 1vw);
}

.card a {
    text-decoration: none;
    font-family: "Lato", sans-serif;
    font-size: max(2.5vh, 15px, 1.5vw);
    color: black;
    transition: color .5s;
}

.card h1 {
    text-decoration: none;
    font-size: max(3.75vh, 15px, 1.5vw);
    color: black;
}

.card h2 {
    text-decoration: none;
    font-size: max(2.5vh, 15px, 1.5vw);
    color: darkgrey;
}

.card b {
    text-decoration:none;
    font-size: max(2.5vh, 15px, 1.5vw);
    padding-bottom: 1vh;
    font-family: "Lato", sans-serif;
    color: black;
}

.card i {
    width: 3vh;
}

.title {
    color: grey;
    font-size: max(1.5vh, 15px, 1vw);
}

button {
    border: none;
    outline: 0;
    display: inline-block;
    padding: 8px;
    color: white;
    background-color: #000;
    text-align: center;
    cursor: pointer;
    width: 100%;
    font-size: max(3vh, 15px, 1.5vw);
    font-family: "Lato", sans-serif;
}

a:hover {
    opacity: 0.5;
}

/* About Page about me paragraph. */

.profile-content-wrapper {
    font-family: "Lato", sans-serif;
    font-size: max(3vh, 15px, 1.5vw);
    text-align: left;
    padding: 1vh 5vh 2vh 5vh;
}

.profile-content-wrapper h1 {
    color: lightseagreen;
}

.profile-content-wrapper a {
    font-family: "Lato", sans-serif;
    font-size: max(3vh, 15px, 1.5vw);
    text-align: left;
}

/* Footer Styles */

footer {
	position: fixed;
	width: 100%;
	left: 0;
	bottom: 0;
	background-color: lightgray;
	color: white;
	text-align: center;
    font-family: "Lato", sans-serif;
    font-weight: 700;
    z-index: 2;
}

/* Resume css */

embed {
    width: 100vw;
    height: 80vh;
    max-height: 100vh;
}
/* ... */

